# flexapi

./: .env.example  .gitignore  .mcp.json  QandA.md  README.md  behave.ini  claude.fastapi.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: crud.py  main.py
app/api/: books.py
app/config/: database.py
app/model/: models.py
app/repository/: __init__.py  book_repository.py
app/repository/entity/: __init__.py  models.py
app/service/: service.py
flyway/sql/: V1__create_tables.sql  V2__insert_mock_data.sql
sql/: schema.sql
src/app/: __init__.py
src/app/config/: __init__.py  config.py  database.py
src/app/model/: models.py
tests/: conftest.py  test_books.py
tests/integration/: books.feature  environment.py
tests/integration/steps/: book_steps.py
tests/resources/: book-1.content.json  book-2.content.json
