[project]
name = "flexapi"
version = "0.1.0"
description = "A FastAPI library application (books) backed by PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "greenlet>=3",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "uuid-utils>=0.10",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a5",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "behave>=1.3.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
